#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_editor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_engine = { path = "../hyper_engine" }

chrono = "0.4"
color-eyre = "0.6"
egui = "0.23"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
nalgebra-glm = "0.18"
