#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_platform = { path = "../hyper_platform" }
hyper_rendering = { path = "../hyper_rendering" }

log = "0.4"
thiserror = "1.0"
