#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_audio = { path = "../hyper_audio" }
hyper_core = { path = "../hyper_core" }
hyper_game = { path = "../hyper_game" }
hyper_math = { path = "../hyper_math" }
hyper_physics = { path = "../hyper_physics" }
hyper_platform = { path = "../hyper_platform" }
hyper_render = { path = "../hyper_render" }

color-eyre = "0.6"
egui = "0.22"
log = "0.4"
