#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_game = { path = "../hyper_game" }
hyper_platform = { path = "../hyper_platform" }
hyper_render = { path = "../hyper_render" }

color-eyre = "0.6"
log = "0.4"
nalgebra-glm = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }
