#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_game"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_math = { path = "../hyper_math" }

log = "0.4"
paste = "1.0"
