#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_game"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_platform = { path = "../hyper_platform" }

log = "0.4"
nalgebra-glm = "0.18"
