#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_physics"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_math = { path = "../hyper_math" }

color-eyre = "0.6"
log = "0.4"
