#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper_core = { path = "../hyper_core" }

log = "0.4"
thiserror = "1.0"
raw-window-handle = "0.5"
winit = "0.28"
