#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_render"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_math = { path = "../hyper_math" }
hyper_platform = { path = "../hyper_platform" }

ash = "0.37"
color-eyre = "0.6"
egui = "0.22"
egui-winit = "0.22"
gpu-allocator = "0.22"
log = "0.4"
smallvec = "1.11"
winit = "0.28"

# NOTE: Temporary
image = "0.24"
tobj = "4.0"
