#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_render"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_game = { path = "../hyper_game" }
hyper_platform = { path = "../hyper_platform" }

ash = "0.37"
ash-window = "0.12"
color-eyre = "0.6"
gpu-allocator = "0.23"
log = "0.4"
nalgebra-glm = "0.18"
smallvec = "1.11"
raw-window-handle = "0.5"
winit = { version = "0.29", features = ["rwh_05"] }

# NOTE: Temporary
image = "0.24"
tobj = "4.0"
