#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper_core = { path = "../hyper_core" }
hyper_platform = { path = "../hyper_platform" }

ash = "0.37"
gpu-allocator = "0.22"
log = "0.4"
glam = "0.23"
thiserror = "1.0"
